--- a/src/template/scripts.html
+++ b/src/template/scripts.html
@@ -3,8 +3,8 @@
 <!-- Swiper JS -->
 <script src="js/swiper-bundle.min.js"></script>
 <script src="js/jquery.fancybox.min.js"></script>
+<script src="js/select2.min.js"></script>
 
-<!-- <script src="js/select2.min.js"></script> -->
 <!-- <script src="js/readmore.min.js"></script> -->
 
 <!-- Yandex Map -->
