--- a/src/scss/blocks/buttons.scss
+++ b/src/scss/blocks/buttons.scss
@@ -9,53 +9,53 @@
 	background: none;
 }
 
-.btn {
-	display: inline-flex;
-	align-items: center;
-	justify-content: center;
-	padding: 13px 60px;
-	min-height: 50px;
-	gap: 10px;
-	text-align: center;
-	color: #000;
-	font-size: 18px;
-	font-weight: 600;
-	border: 0;outline: none;
-	border-radius: 8px;
-	background: linear-gradient(45deg, #C27E21 0%, #F1B74B 50%, #763D12 100%), #BABABA;
-	box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.50);
-	transition: .3s ease;
-	i {
-		font-size: 24px;
-	}
-	&:hover {
-		background: linear-gradient(45deg, #FBA52F 0%, #DCB56B 50%, #B87440 100%);
-	}
-	&.disabled {
-		background: linear-gradient(45deg, #5E441D 0%, #6B5429 50%, #3E2714 90.22%);
-		cursor: auto;
-	}
-}
+// .btn {
+// 	display: inline-flex;
+// 	align-items: center;
+// 	justify-content: center;
+// 	padding: 13px 60px;
+// 	min-height: 50px;
+// 	gap: 10px;
+// 	text-align: center;
+// 	color: #000;
+// 	font-size: 18px;
+// 	font-weight: 600;
+// 	border: 0;outline: none;
+// 	border-radius: 8px;
+// 	background: linear-gradient(45deg, #C27E21 0%, #F1B74B 50%, #763D12 100%), #BABABA;
+// 	box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.50);
+// 	transition: .3s ease;
+// 	i {
+// 		font-size: 24px;
+// 	}
+// 	&:hover {
+// 		background: linear-gradient(45deg, #FBA52F 0%, #DCB56B 50%, #B87440 100%);
+// 	}
+// 	&.disabled {
+// 		background: linear-gradient(45deg, #5E441D 0%, #6B5429 50%, #3E2714 90.22%);
+// 		cursor: auto;
+// 	}
+// }
 
-.btn-second {
-	display: inline-flex;
-	justify-content: center;
-	align-items: center;
-	gap: 10px;
-	color: var(--font-color);
-	font-size: 18px;
-	font-weight: 600;
-	transition: .3s ease;
-	i {
-		font-size: 24px;
-	}
-	&:hover {
-		color: var(--gold-color);
-	}
-	&.disabled {
-		color: var(--darkGrey-color);
-	}
-}
+// .btn-second {
+// 	display: inline-flex;
+// 	justify-content: center;
+// 	align-items: center;
+// 	gap: 10px;
+// 	color: var(--font-color);
+// 	font-size: 18px;
+// 	font-weight: 600;
+// 	transition: .3s ease;
+// 	i {
+// 		font-size: 24px;
+// 	}
+// 	&:hover {
+// 		color: var(--gold-color);
+// 	}
+// 	&.disabled {
+// 		color: var(--darkGrey-color);
+// 	}
+// }
 
 .btn-icon {
 	display: inline-flex;
@@ -207,121 +207,154 @@
 		}
 	}
 }
-
-.video {
-	display: flex;
+.link-grey {
+	display: inline-flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: flex-start;
 	position: relative;
-	.btn-play {
+	font-size: 17px;
+	font-style: normal;
+	font-weight: 600;
+	line-height: normal;
+	text-transform: uppercase;
+	color: #989898;
+	margin: 0;padding: 0;
+	outline: none;border: 0;
+	background: none;
+	&:before {
+		content: '';
 		position: absolute;
-	}
-	>img {
+		left: 0;
+		bottom: -4px;
 		width: 100%;
-		height: 100%;
-		border-radius: var(--border-radius);
-	}
-
-	// &:before {
-	// 	content: '';
-	// 	position: absolute;
-	// 	left: 0;top: 0;
-	// 	width: 100%;
-	// 	height: 100%;
-	// 	border-radius: 30px;
-	// 	background: rgba(0, 0, 0, 0.45);
-	// 	z-index: 2;
-	// }
-	// &:after {
-	// 	content: '';
-	// 	position: absolute;
-	// 	left: 50%;
-	// 	top: 50%;
-	// 	transform: translate(-50%,-50%);
-	// 	height: 35%;
-	// 	aspect-ratio: 1 / 1;
-	// 	background-image: url('../img/play.svg');
-	// 	background-repeat: no-repeat;
-	// 	opacity: 0.8;
-	// 	z-index: 5;
-	// 	transition: .3s ease;
-	// }
-	// &:hover {
-	// 	&::after {
-	// 		opacity: 1;
-	// 	}
-	// }
-	&.disabled {
-		&::after {
-			opacity: 0.5;
-		}
-	}
-}
-.btn-play {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 100px;
-	height: 100%;
-	position: relative;
-	cursor: pointer;
-	img {
-		width: 34px;
-		height: 34px;
-		z-index: 3;
-	}
-	&::before {
-		content: '';
-		position: absolute;
-		left: 50%;top: 50%;
-		transform: translate(-50%,-50%);
-		width: 100px;height: 100px;
-		border-radius: 100px;
-		background: rgba(201, 168, 105, 0.15);
-		transition: .3s ease;
-		z-index: 1;
-	}
-	&::after {
-		content: '';
-		position: absolute;
-		left: 50%;top: 50%;
-		transform: translate(-50%,-50%);
-		width: 80px;height: 80px;
-		border-radius: 100px;
-		background: #C9A869;
-		transition: .3s ease;
-		z-index: 2;
+		height: 1.5px;
+		border-radius: 5px;
+		background-color: #989898;
+		transition: background-color .3s ease, transform .3s ease;
 	}
 	&:hover {
-		&:before {
-			background: rgba(201, 168, 105, 0.15);
-		}
-		&::after {
-			background: rgba(228, 197, 138, 1);
-		}
-	}
-	&.disabled {
-		cursor: auto;
-		img {
-			opacity: 0.4;
-		}
-		&:before {
-			background: #1B1A17;
-		}
-		&::after {
-			background: #4A402D;
+		color: var(--global-color);
+		&::before {
+			transform: translateY(-1px);
+			background-color: var(--global-color);
 		}
 	}
 }
-.btn-remove {
-	width: 12px;
-	height: 12px;
-	i {
-		font-size: 12px;
-		color: var(--font-color);
-		transition: .3s ease;
-		&:hover {
-			color: var(--red-color);
-		}
-	}
-}
+
+// .video {
+// 	display: flex;
+// 	align-items: center;
+// 	justify-content: center;
+// 	position: relative;
+// 	.btn-play {
+// 		position: absolute;
+// 	}
+// 	>img {
+// 		width: 100%;
+// 		height: 100%;
+// 		border-radius: var(--border-radius);
+// 	}
+
+// 	// &:before {
+// 	// 	content: '';
+// 	// 	position: absolute;
+// 	// 	left: 0;top: 0;
+// 	// 	width: 100%;
+// 	// 	height: 100%;
+// 	// 	border-radius: 30px;
+// 	// 	background: rgba(0, 0, 0, 0.45);
+// 	// 	z-index: 2;
+// 	// }
+// 	// &:after {
+// 	// 	content: '';
+// 	// 	position: absolute;
+// 	// 	left: 50%;
+// 	// 	top: 50%;
+// 	// 	transform: translate(-50%,-50%);
+// 	// 	height: 35%;
+// 	// 	aspect-ratio: 1 / 1;
+// 	// 	background-image: url('../img/play.svg');
+// 	// 	background-repeat: no-repeat;
+// 	// 	opacity: 0.8;
+// 	// 	z-index: 5;
+// 	// 	transition: .3s ease;
+// 	// }
+// 	// &:hover {
+// 	// 	&::after {
+// 	// 		opacity: 1;
+// 	// 	}
+// 	// }
+// 	&.disabled {
+// 		&::after {
+// 			opacity: 0.5;
+// 		}
+// 	}
+// }
+// .btn-play {
+// 	display: flex;
+// 	align-items: center;
+// 	justify-content: center;
+// 	width: 100px;
+// 	height: 100%;
+// 	position: relative;
+// 	cursor: pointer;
+// 	img {
+// 		width: 34px;
+// 		height: 34px;
+// 		z-index: 3;
+// 	}
+// 	&::before {
+// 		content: '';
+// 		position: absolute;
+// 		left: 50%;top: 50%;
+// 		transform: translate(-50%,-50%);
+// 		width: 100px;height: 100px;
+// 		border-radius: 100px;
+// 		background: rgba(201, 168, 105, 0.15);
+// 		transition: .3s ease;
+// 		z-index: 1;
+// 	}
+// 	&::after {
+// 		content: '';
+// 		position: absolute;
+// 		left: 50%;top: 50%;
+// 		transform: translate(-50%,-50%);
+// 		width: 80px;height: 80px;
+// 		border-radius: 100px;
+// 		background: #C9A869;
+// 		transition: .3s ease;
+// 		z-index: 2;
+// 	}
+// 	&:hover {
+// 		&:before {
+// 			background: rgba(201, 168, 105, 0.15);
+// 		}
+// 		&::after {
+// 			background: rgba(228, 197, 138, 1);
+// 		}
+// 	}
+// 	&.disabled {
+// 		cursor: auto;
+// 		img {
+// 			opacity: 0.4;
+// 		}
+// 		&:before {
+// 			background: #1B1A17;
+// 		}
+// 		&::after {
+// 			background: #4A402D;
+// 		}
+// 	}
+// }
+// .btn-remove {
+// 	width: 12px;
+// 	height: 12px;
+// 	i {
+// 		font-size: 12px;
+// 		color: var(--font-color);
+// 		transition: .3s ease;
+// 		&:hover {
+// 			color: var(--red-color);
+// 		}
+// 	}
+// }
