--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -64,8 +64,8 @@
 @import "blocks/header";
 @import "blocks/footer";
 // @import "blocks/breadcrumbs";
-// @import "blocks/pagination";
-// @import "blocks/tags";
+@import "blocks/pagination";
+@import "blocks/tags";
 // @import "blocks/scroll-container";
 // @import "blocks/accordion";
 // @import "blocks/tabs";
@@ -91,6 +91,7 @@
 @import "widgets/history.scss";
 @import "widgets/gallery.scss";
 @import "widgets/form-one.scss";
+@import "widgets/catalog.scss";
 
 
 @include tablet {
