--- a/src/template/meta.html
+++ b/src/template/meta.html
@@ -23,5 +23,5 @@
 <!-- SWIPER -->
 <link href="css/swiper-bundle.min.css" rel="stylesheet">
 <!-- SELECT2 -->
-<!-- <link rel="stylesheet" href="css/select2.min.css"> -->
+<link rel="stylesheet" href="css/select2.min.css">
 <link href="css/style.min.css" type="text/css" rel="stylesheet">
