--- a/src/scss/blocks/breadcrumbs.scss
+++ b/src/scss/blocks/breadcrumbs.scss
@@ -1,26 +1,28 @@
 /*-----breadcrumbs-----*/
-.kama_breadcrumbs {
+.kama_breadcrumbs,
+.woocommerce-breadcrumb {
 	display: flex;
 	align-items: center;
 	justify-content: flex-start;
 	flex-wrap: wrap;
-	row-gap: 6px;
-	padding: 20px 0;
-	font-size: 17px;
-	line-height: 17px;
-	color: var(--darkGrey-color);
+	row-gap: 4px;
+	padding: 10px 0;
+	margin-bottom: 36px;
+	font-size: 15px;
+	line-height: 18px;
+	color: #858585;
 	span {
-		line-height: 17px;
+		line-height: 18px;
 	}
 	a {
 		position: relative;
-		line-height: 17px;
+		line-height: 18px;
 		color: var(--font-color);
 		display: inline-flex;
 		align-items: center;
 		transition: color 0.3s ease-in;
 		&:hover {
-			color: var(--gold-color);
+			color: var(--global-color);
 		}
 	}
 	.kb_sep {
@@ -28,10 +30,10 @@
 		vertical-align: middle;
 		i {
 			transform: rotate(-90deg);
-			font-size: 12px;
-			line-height: 17px !important;
-			margin: 0 12px;
-			color: #838383;
+			font-size: 24px;
+			line-height: 24px !important;
+			margin: 0 5px;
+			color: var(--global-color);
 		}
 	}
 }
