--- a/src/scss/blocks/pagination.scss
+++ b/src/scss/blocks/pagination.scss
@@ -7,6 +7,11 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  &-info {
+    font-size: 17px;
+    color: #989898;
+    margin-right: 16px;
+  }
   &>.page-numbers {
     list-style: none;
     padding: 0;margin: 0 0 0 auto;
