--- a/src/scss/blocks/sliders.scss
+++ b/src/scss/blocks/sliders.scss
@@ -78,8 +78,11 @@
     font-style: normal;
     font-weight: 400;
     line-height: 1;
-    color: #F5F6F7;
+    color: var(--font-color);
   }
+}
+.default-wrapper-dark .swiper-bottom .swiper-pagination-fraction {
+  color: var(--lightGrey-color);
 }
 .swiper-nav {
   display: flex;
