--- a/src/scss/blocks/tabs.scss
+++ b/src/scss/blocks/tabs.scss
@@ -1,7 +1,7 @@
 .tabs-style {
 	.tabs-nav {
 		overflow: hidden;
-		margin: 0;
+		margin: 0 0 16px 0;
 		padding: 0;
 	}
 	.tabs-nav li {
@@ -12,7 +12,7 @@
 		margin-top: 10px;
 		margin-bottom: 10px;
 		&:not(:last-child) {
-			margin-right: 70px;
+			margin-right: 24px;
 		}
 	}    
 	.tabs-nav a {
@@ -20,10 +20,11 @@
 		position: relative;
 		padding: 2px 0;
 		font-weight: 400;
-		font-size: 18px;
+		font-size: 17px;
 		line-height: 1.2;
 		text-transform: uppercase;
-		color: var(--font-color);
+		color: #989898;
+		transition: color .3s ease;
 		&::before {
 			content: '';
 			position: absolute;
@@ -31,16 +32,29 @@
 			right: 0;
 			bottom: -1px;
 			width: 100%;
-			height: 2px;
-			background-color: var(--global-color);
-			opacity: 0;
-			transition: opacity .3s ease;
+			height: 1px;
+			background-color: #989898;
+			transition: background-color .3s ease;
 		}
 		&:hover,
 		&.active {
-			font-weight: 700;
+			color: var(--global-color);
 			&::before {
-				opacity: 1;
+				background-color: var(--global-color);
+			}
+		}
+	}
+	.tabs-item {
+		div {
+			p {
+				margin-top: 0;
+				margin-bottom: 0;
+				font-size: 17px;
+				font-weight: 400;
+				line-height: 1.2;
+				&:not(:last-child) {
+					margin-bottom: 1rem;
+				}
 			}
 		}
 	}
