--- a/src/scss/widgets/reviews.scss
+++ b/src/scss/widgets/reviews.scss
@@ -47,6 +47,13 @@
         }
       }
     }
+    &Swiper {
+      overflow: visible;
+      .swiper-slide {
+        width: 470px;
+        flex-shrink: 0;
+      }
+    }
   }
   &-head {
     display: flex;
@@ -55,8 +62,8 @@
     width: 100%;
   }
   &-avatar {
-    width: 80px;
-    height: 80px;
+    width: 80px !important;
+    height: 80px !important;
     border-radius: 50%;
     flex-shrink: 0;
     object-fit: cover;
