Готова страница Faq

--- a/src/scss/widgets/reviews.scss
+++ b/src/scss/widgets/reviews.scss
@@ -140,6 +140,9 @@
         }
       }
     }
+    textarea {
+      width: 75%;
+    }
     &-group-title {
       font-size: 17px;
       font-weight: 400;
