--- a/src/scss/blocks/accordion.scss
+++ b/src/scss/blocks/accordion.scss
@@ -1,8 +1,8 @@
 .accordion-item {
-  padding: 14px 12px 16px 0;
-  border-bottom: 1px solid var(--font-color);
+  padding: 20px 8px 20px 0;
+  border-bottom: 1px solid #8b8b8b;
   &:nth-child(1) {
-    border-top: 1px solid var(--font-color);
+    border-top: 1px solid #8b8b8b;
   }
 }
 .accordion-header {
@@ -13,14 +13,14 @@
 }
 .accordion-title,
 .accordion-title h3 {
-  width: calc(100% - 54px);
-  font-weight: 500;
+  width: 100%;
+  font-weight: 700;
   font-size: 18px;
   line-height: 1.2;
   color: var(--font-color);
   transition: .3s;
   &:hover {
-    color: var(--gold-color);
+    color: var(--global-color);
   }
 }
 .accordion-button {
@@ -28,9 +28,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 34px;
-  height: 34px;
-  margin-left: 20px;
+  width: 28px;
+  height: 28px;
+  margin-left: 16px;
   &:before,
   &:after {
     display: block;
@@ -39,8 +39,9 @@
     top: 50%;
     left: 0;
     width: 100%;
-    height: 1px;
-    background-color: #ECE8E1;
+    height: 3px;
+    border-radius: 10px;
+    background-color: var(--global-color);
     transition: .3s ease;
   }
   &:after {
@@ -49,7 +50,7 @@
   &:hover {
     &::before,
     &::after {
-      background-color: var(--gold-color);
+      opacity: .7;
     }
   }
 }
@@ -58,12 +59,11 @@
   height: 0;
   transition: all .25s ease;
   p {
-    margin-top: 16px;
+    margin-top: 14px;
     margin-bottom: 0;
     font-weight: 400;
     font-size: 17px;
     line-height: 1.2;
-    width: calc(100% - 54px);
     // color: var(--fontSecond-color);
   }
 }
@@ -75,24 +75,24 @@
   }
 }
 
-@include mobile {
-  .accordion-item {
-    padding-right: 0;
-  }
-  .accordion-title,
-  .accordion-title h3 {
-    width: 100%;
-    font-size: 16px;
-  }
-  .accordion-button {
-    width: 20px;
-    height: 20px;
-  }
-  .accordion-content {
-    p {
-      font-size: 16px;
-      width: 100%;
-    }
-  }
-}
+// @include mobile {
+//   .accordion-item {
+//     padding-right: 0;
+//   }
+//   .accordion-title,
+//   .accordion-title h3 {
+//     width: 100%;
+//     font-size: 16px;
+//   }
+//   .accordion-button {
+//     width: 20px;
+//     height: 20px;
+//   }
+//   .accordion-content {
+//     p {
+//       font-size: 16px;
+//       width: 100%;
+//     }
+//   }
+// }
 
