--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -67,7 +67,7 @@
 @import "blocks/pagination";
 @import "blocks/tags";
 // @import "blocks/scroll-container";
-// @import "blocks/accordion";
+@import "blocks/accordion";
 @import "blocks/tabs";
 // @import "blocks/tooltip";
 // @import "blocks/hover-dpd";
@@ -94,6 +94,7 @@
 @import "widgets/catalog.scss";
 @import "widgets/product.scss";
 @import "widgets/contentbl.scss";
+@import "widgets/faq.scss";
 
 
 @include tablet {
