--- a/src/template/scripts.html
+++ b/src/template/scripts.html
@@ -8,6 +8,6 @@
 <!-- <script src="js/readmore.min.js"></script> -->
 
 <!-- Yandex Map -->
-<!-- <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&apikey=<b4d2f0f6-8d3a-424f-8458-7a684c31efe5>" type="text/javascript"></script> -->
-<!-- <script src="js/icon_customImage.min.js"></script> -->
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&apikey=<5a55f487-a252-4929-8714-ec32f386f97c>" type="text/javascript"></script>
+<script src="js/icon_customImage.min.js"></script>
 <script src="js/app.min.js"></script>
