Готова страница Payment and delivery

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -96,6 +96,7 @@
 @import "widgets/contentbl.scss";
 @import "widgets/faq.scss";
 @import "widgets/contacts.scss";
+@import "widgets/content-blocks.scss";
 
 
 @include tablet {
