--- a/src/scss/widgets/content-blocks.scss
+++ b/src/scss/widgets/content-blocks.scss
@@ -1,5 +1,7 @@
 .paymentbl,
-.deliverybl {
+.deliverybl,
+.warrantybl,
+.orderbl {
   .default-wrapper {
     padding-top: 40px;
     padding-bottom: 40px;
@@ -13,9 +15,14 @@
     .delivery-card {
       background: var(--grey-color);
     }
+    .link {
+      margin-top: 1rem;
+      margin-bottom: 0.5rem;
+    }
   }
 }
-.paymentbl {
+.paymentbl,
+.warrantybl {
   &__container {
     display: flex;
     align-items: flex-start;
@@ -72,6 +79,39 @@
         text-decoration: none;
       }
     }
+  }
+}
+.orderbl {
+  .heading {
+    width: calc(50% - 20px);
+  }
+  &__cards {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    row-gap: 46px;
+    width: 100%;
+    .step {
+      width: calc(50% - 20px);
+      &:nth-child(odd) {
+        margin-right: 40px;
+      }
+      &:nth-child(1),
+      &:nth-child(2) {
+        margin-right: 50px;
+      }
+    }
+  }
+  &__img {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: calc(50% - 20px);
+    aspect-ratio: 56 / 40;
+    object-fit: cover;
+    border-top-right-radius: var(--border-radius);
+    border-bottom-left-radius: var(--border-radius);
   }
 }
 .payment-logos {
@@ -142,6 +182,56 @@
     &:hover {
       color: var(--global-color);
       text-decoration: none;
+    }
+  }
+}
+
+.errorpage {
+  &__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    max-width: 860px;
+    min-height: 360px;
+    margin: 0 auto;
+    z-index: 1;
+    &::before {
+      content: '';
+      position: absolute;
+      left: 0;top: 20px;
+      width: 260px;
+      height: 165px;
+      border-radius: var(--border-radius);
+      object-fit: cover;
+      background-image: url('../img/errorpage-img-01.jpg');
+      z-index: -1;
+    }
+    &::after {
+      content: '';
+      position: absolute;
+      right: 110px;bottom: 0;
+      width: 140px;
+      height: 165px;
+      border-radius: var(--border-radius);
+      object-fit: cover;
+      background-image: url('../img/errorpage-img-02.jpg');
+      z-index: -1;
+    }
+    span {
+      display: block;
+      margin-bottom: 35px;
+      font-size: 20px;
+      font-weight: 400;
+      line-height: 1.2;
+      text-align: center;
+      color: var(--global-color);
+    }
+    .title-1 {
+      font-weight: 700;
+      text-align: center;
+      margin-bottom: 32px;
     }
   }
 }
