--- a/src/scss/widgets/contentbl.scss
+++ b/src/scss/widgets/contentbl.scss
@@ -91,6 +91,13 @@
     line-height: 1;
     color: var(--global-color);
   }
+  h3 {
+    margin-top: 0;
+    margin-bottom: 12px;
+    font-size: 17px;
+    font-weight: 700;
+    line-height: 1.2;
+  }
   p {
     margin-top: 0;
     margin-bottom: 0;
