Модальные окна + доработки
- Сделал анимации
- Сделал модалки через фансибокс
- Доработал всё, посмотрев комментарии.

Получается что группу страниц "Основные страницы" делал 15, 16, 17, 18 сентября.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -77,7 +77,7 @@
 // @import "blocks/article";
 @import "blocks/sliders";
 @import "blocks/form";
-// @import "blocks/modal";
+@import "blocks/modal";
 @import "blocks/components.scss";
 
 /***** SECTIONS GLOBAL (Widgets) *****/
