--- a/src/scss/widgets/product.scss
+++ b/src/scss/widgets/product.scss
@@ -161,10 +161,10 @@
     align-items: flex-start;
     justify-content: space-between;
     width: 100%;
-    margin-bottom: 100px;
+    // margin-bottom: 100px;
     .col {
       width: calc(50% - 5px);
-      &>div {
+      &>div:not(:last-child) {
         margin-bottom: 10px;
       }
     }
@@ -220,6 +220,7 @@
     grid-template-columns: 1fr 1fr;
     gap: 20px;
     width: 100%;
+    padding-top: 90px;
     margin-bottom: 100px;
     .col {
       width: 100%;
@@ -244,8 +245,12 @@
   &-about {
     .tabs-style .tabs-nav {
       display: flex;
-      align-items: flex-start;
+      align-items: flex-end;
       justify-content: center;
+      margin-bottom: 40px;
+      a.active {
+        font-size: 22px;
+      }
     }
     .tabs-item {
       .title-1 {
@@ -263,10 +268,61 @@
           }
         }
       }
+      .heading-row {
+        display: grid;
+        grid-template-columns: 4fr 8fr;
+        gap: 20px 40px;
+        margin-bottom: 20px;
+        div {
+          p {
+            margin-top: 0;
+            margin-bottom: 0;
+            &:not(:last-child) {
+              margin-bottom: 14px;
+            }
+          }
+        }
+      }
+    }
+  }
+  .download-link {
+    width: 100%;
+    &:not(:last-child) {
+      margin-bottom: 10px;
     }
   }
 }
 
+.loochs-list {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 16px;
+  width: 100%;
+  position: relative;
+  &::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 40px;
+    width: 100%;
+    height: 1px;
+    background: #F5EFE5;
+  }
+  .item {
+    img {
+      width: 120px;
+      height: 80px;
+    }
+    h3 {
+      margin-top: -25px;
+      margin-bottom: 0;
+      font-size: 17px;
+      font-weight: 400;
+      line-height: 1.2;
+      color: var(--font-color);
+    }
+  }
+}
 .point {
   display: inline-flex;
   align-items: flex-start;
@@ -285,7 +341,81 @@
     margin-right: 10px;
   }
 }
-
+.steps__cards {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+.stepcard {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    width: 100%;
+    padding: 20px;
+    border-radius: var(--border-radius);
+    background: var(--grey-color);
+    &:not(:last-child) {
+      margin-bottom: 10px;
+    }
+    &-numb {
+      margin-right: 36px;
+      width: calc(8% - 24px);
+      flex-shrink: 0;
+      font-size: 20px;
+      font-weight: 400;
+      line-height: 1.2;
+      color: var(--global-color);
+    }
+    &-title {
+      margin: 0 36px 0 0;
+      width: calc(32% - 24px);
+      font-size: 20px;
+      font-weight: 700;
+      line-height: 1.2;
+      color: var(--font-color);
+    }
+    &-text {
+      margin: 0;
+      width: calc(60% - 24px);
+      font-size: 17px;
+      font-weight: 400;
+      line-height: 1.2;
+      color: var(--font-color);
+      p {
+        margin-top: 0;
+      }
+    }
+}
+.prodconsult {
+  justify-content: space-between;
+  flex-direction: row;
+  padding: 20px;
+  .col {
+    &:nth-child(1) {
+      width: calc(40% - 20px);
+    }
+    &:nth-child(2) {
+      width: calc(60% - 20px);
+    }
+  }
+  &__img {
+    width: 100%;
+    border-radius: var(--border-radius);
+    object-fit: cover;
+  }
+  .title-2 {
+    color: var(--lightGrey-color);
+  }
+  p.accept {
+    font-size: 12px !important;
+  }
+  .link-input {
+    margin-bottom: 6px;
+  }
+}
 .form-consult {
   .form-group {
     width: calc(50% - 5px);
