--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -97,6 +97,7 @@
 @import "widgets/faq.scss";
 @import "widgets/contacts.scss";
 @import "widgets/content-blocks.scss";
+@import "widgets/cartbar.scss";
 
 
 @include tablet {
