--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -98,6 +98,7 @@
 @import "widgets/contacts.scss";
 @import "widgets/content-blocks.scss";
 @import "widgets/cartbar.scss";
+@import "widgets/cart.scss";
 
 
 @include tablet {
