--- a/src/scss/widgets/cartbar.scss
+++ b/src/scss/widgets/cartbar.scss
@@ -3,7 +3,7 @@
     position: fixed;
     top: 0;right: 0;bottom: 0;
     padding-top: 40px;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
     width: 380px;
     max-width: 100%;
     height: 100vh;
@@ -39,6 +39,9 @@
         }
       }
     }
+  }
+  &-head {
+    padding-top: 0;
   }
   &-card {
     position: relative;
