--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -99,6 +99,7 @@
 @import "widgets/content-blocks.scss";
 @import "widgets/cartbar.scss";
 @import "widgets/cart.scss";
+@import "widgets/lk.scss";
 
 
 @include tablet {
