--- a/src/scss/blocks/form.scss
+++ b/src/scss/blocks/form.scss
@@ -30,6 +30,13 @@
 		.select2 {
 			width: 100% !important;
 		}
+		a {
+			font-size: 15px;
+			text-decoration: underline;
+			&:hover {
+				text-decoration: none;
+			}
+		}
 	}
 	label {
 		display: block;
