--- a/src/scss/blocks/components.scss
+++ b/src/scss/blocks/components.scss
@@ -145,7 +145,9 @@
 .woocommerce-orders-table {
   width: 100%;
   border: none;
-  margin-bottom: 20px;
+  &:not(:last-child) {
+    margin-bottom: 20px;
+  }
 }
 .woocommerce-orders-table {
   margin-bottom: 96px;
@@ -153,7 +155,7 @@
 
 .table-style thead th,
 .woocommerce-orders-table thead th {
-  padding: 15px 10px;
+  padding: 15px 20px;
   font-size: 17px;
   font-weight: 700;
   line-height: 1.2;
@@ -173,7 +175,7 @@
     }
   }
   td {
-    padding: 26px 10px 24px 10px;
+    padding: 26px 20px 24px 20px;
     font-size: 17px;
     font-weight: 400;
     line-height: 1.2;
@@ -218,6 +220,12 @@
         margin-right: 14px;
       }
     }
+  }
+}
+.order-table thead th,
+.order-table tbody td {
+  &:nth-child(3) {
+    text-align: right;
   }
 }
 
