--- a/src/scss/blocks/form.scss
+++ b/src/scss/blocks/form.scss
@@ -8,7 +8,7 @@
 		margin-bottom: 24px;
 	}
   &-title {
-	margin-top: 0;
+		margin-top: 0;
     margin-bottom: 20px;
     display: block;
     font-size: 20px;
@@ -485,6 +485,24 @@ input[type="number"]::-webkit-inner-spin-button {
 			margin-left: auto;
 			font-weight: 400;
 			text-align: right;
+		}
+	}
+}
+
+.row-3 {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  width: 100%;
+	&>.col {
+		margin-right: 30px;
+		width: calc(33.333% - 24px);
+		&>.row-1:not(:last-child) {
+			margin-bottom: 34px;
+		}
+		&:nth-child(3n) {
+			margin-right: 0;
 		}
 	}
 }
