--- a/src/scss/widgets/lk.scss
+++ b/src/scss/widgets/lk.scss
@@ -7,17 +7,26 @@
       margin-bottom: 20px;
     }
   }
-  &-heading {
+  &-head {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     width: 100%;
-    .col {
-      &:nth-child(2) {
-        margin-left: 24px;
-      }
-    }
+    gap: 24px;
+  }
+  &-title {
+    margin: 0;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 1.15;
+    color: var(--font-color);
+  }
+  &-text {
+    margin-bottom: 24px;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.15;
   }
   &-main {
     &-cards {
@@ -30,7 +39,6 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-
       padding: 40px 30px;
       border-radius: 15px;
       min-height: 240px;
@@ -108,6 +116,46 @@
           margin-right: 48px;
         }
       }
+    }
+  }
+  &-delivery {
+    &-cards {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 20px;
+      width: 100%;
+    }
+    &card {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 30px;
+      border-radius: 15px;
+      min-height: 150px;
+      background: var(--grey-color);
+      h4 {
+        margin-top: 0;
+        margin-bottom: 24px;
+        font-size: 17px;
+        font-weight: 700;
+        line-height: 1.15;
+      }
+      p {
+        margin-top: 0;
+        margin-bottom: 0;
+        font-size: 17px;
+        font-weight: 400;
+        line-height: 1.15;
+        &:not(:last-child) {
+          margin-bottom: 12px;
+        }
+      }
+    }
+  }
+  .form {
+    &-title {
+      font-size: 17px;
+      margin-bottom: 16px;
     }
   }
 }
