--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -33,15 +33,10 @@ section {
 	align-items: center;
 	justify-content: center;
 }
-// .dis-scroll {
-// 	position: fixed;
-// 	left: 0;
-// 	top: 0;
-// 	overflow: hidden;
-// 	width: 100%;
-// 	height: 100vh;
-// 	overscroll-behavior: none;
-// }
+.dis-scroll {
+	overflow: hidden;
+	height: 100vh;
+}
 ::-webkit-scrollbar {
 	width: 0.375rem;
 	background: var(--lightBlack-color);
