--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -131,6 +131,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-burger:before {
+  content: "\e90f";
+}
+.icon-fliter:before {
+  content: "\e910";
+}
 .icon-phone:before {
   content: "\e90b";
 }
